# NetDocs

./: .gitignore  DESIGN.md  PRD.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_rbac.py  0003_attachment_indexes.py
backend/app/: __init__.py  main.py
backend/app/core/: concurrency.py  config.py  database.py  deps.py  exceptions.py  files.py  logging.py  metrics.py  middleware.py  pagination.py  permissions.py  ratelimit.py  redis.py  security.py  sessions.py  storage.py
backend/app/db/: seed.py
backend/app/models/: __init__.py  attachment.py  audit_log.py  base.py  device.py  inventory.py  network.py  problem.py  site.py  user.py
backend/app/repositories/: attachment.py  audit.py  base.py  device.py  problem.py  site.py  user.py
backend/app/schemas/: attachment.py  audit.py  auth.py  common.py  device.py  lookups.py  network.py  problem.py  site.py  user.py
backend/app/services/: attachment_service.py  audit_query_service.py  audit_service.py  auth_service.py  device_service.py  lookup_service.py  network_service.py  problem_service.py  site_service.py  user_service.py
backend/app/worker/: __init__.py  main.py
backend/docs/: OPERATIONS.md
backend/scripts/: backup.sh  restore.sh
backend/tests/: conftest.py  test_api_integration.py  test_files.py  test_jwt_keys.py  test_permissions.py  test_ratelimit.py  test_schemas.py  test_security.py  test_storage.py
frontend/: Dockerfile  (+6 more)
(+116 files in other folders)
